[project]
name = "mlmodel-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "coremltools>=8.2",
    "datasets>=3.5.0",
    "peft>=0.15.1",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]
